fix horizontal scroll why us  rename programmatic

--- a/ui/WhyUs/WhyUsHero/HeroAnim/hero-anim.module.scss
+++ b/ui/WhyUs/WhyUsHero/HeroAnim/hero-anim.module.scss
@@ -8,6 +8,7 @@
   position: relative;
   width: 100%;
   height: auto;
+  overflow: hidden;
 
   & > div {
     position: absolute;
